feat(api):custom error and response utils
